--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -59,6 +59,27 @@
 
 <script>
 
+  function.playSound(event){
+    const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+    const key = document.querySelector(`div[data-key="${e.keyCode}"]`);
+
+    if(!audio) return; //stop the function from running all together
+
+    audio.currentTime = 0; //rewind to the stop
+    audio.play();
+
+    key.classList.add('playing'); //adding a class to a pressed key
+  }
+
+  function removeTransition(event) {
+    if(e.propertyName != 'transform') return; //skip it if it's not a transform
+    event.target.classList.remove('playing'); //used to remove the add class
+  }
+
+  const keys = document.querySelectorAll(`.key`);
+  keys.forEach(key => key.addEventListener('transitionend', removeTransition)); //items.forEach() instead of just forEach, which means it's a property of an array.
+  window.addEventListener('keydown', playSound) //when we hit a key on the keyboard, meaning `keydown`, we would like to run the `playSound` function.
+
 </script>
 
 
