--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -59,7 +59,7 @@
 
 <script>
 
-  function.playSound(event){
+  function.playSound(e){
     const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
     const key = document.querySelector(`div[data-key="${e.keyCode}"]`);
 
@@ -71,7 +71,7 @@
     key.classList.add('playing'); //adding a class to a pressed key
   }
 
-  function removeTransition(event) {
+  function removeTransition(e) {
     if(e.propertyName != 'transform') return; //skip it if it's not a transform
     event.target.classList.remove('playing'); //used to remove the add class
   }
