--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -70,13 +70,12 @@
 
     if(!audio) return; //stop the function from running all together
 
+    key.classList.add('playing'); //adding a class to a pressed key
     audio.currentTime = 0; //rewind to the stop
     audio.play();
-
-    key.classList.add('playing'); //adding a class to a pressed key
   }
 
-  const keys = document.querySelectorAll(`.key`);
+  const keys = Array.from(document.querySelectorAll('.key'));
   keys.forEach(key => key.addEventListener('transitionend', removeTransition)); //items.forEach() instead of just forEach, which means it's a property of an array.
   window.addEventListener('keydown', playSound) //when we hit a key on the keyboard, meaning `keydown`, we would like to run the `playSound` function.
 
